# wms-api

./: BUILD.txt  CMakeLists.txt
pkgconfig/: CMakeLists.txt  wms-api.pc.in
project/: wms-api.spec
wmproxy-api-cpp/: CMakeLists.txt  build_deb.sh
wmproxy-api-cpp/src/: CMakeLists.txt
